--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,85 @@
     margin: 0;
     padding: 0;
     border: 0;
+    font-family: sans-serif;
+    font-style: italic;
+}
+.inline{
+    display:inline;
 }
 
 nav{
 width: 100%;
 height: 56px;
 background-color: #2874f0;
+position: fixed;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+
+#logo img{
+    height:20px;
+    width:75px;
+    display: block;
+}
+#logo a{
+    text-decoration:none;
+    color: aliceblue;
+}
+#logo span{
+    font-size: 11px;
+}
+#logo span:nth-child(3){
+    color: #FFE500;
+}
+#logo span:nth-child(3) img{
+    width:10px;
+    height:10px;
+    display: inline;
+}
+
+
+#search{
+    display: flex;
+    justify-content: space-between;
+    background-color: aliceblue;
+    width: 560px;
+    height: 36px;
+    align-items: center;
+    margin-left: 10px;
+}
+#search input{
+    width: 500px;
+    height: 25px;
+    margin-left: 10px;
+    /* background-color: #FFE500; */
+    border:none;
+    outline:none;
+}
+#search button{
+    text-align: center;
+    width: 25px;
+    height: 25px;
+    margin-right: 10px;
+}
+#search img{
+    height: 20px;
+    width: 20px;
+    
+}
+
+#login{
+    width: 120px;
+    height: 30px;
+    background-color: white;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-left: 30px   ;
+}
+
+#seller a{
+    text-decoration: none;
+    color: aliceblue;
 }
