--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ display: flex;
 justify-content: center;
 align-items: center;
 }
+#logo{
+    margin-right: 20px;
+}
 
 #logo img{
     height:20px;
@@ -80,7 +83,27 @@ align-items: center;
     margin-left: 30px   ;
 }
 
+#login button{
+    color: #2874f0;
+    font-size: 15px;
+    background-color: white;
+    
+}
+
 #seller a{
     text-decoration: none;
     color: aliceblue;
+    margin-left: 40px;
+}
+
+#more a{
+    text-decoration: none;
+    color: aliceblue;
+    margin-left: 40px;
+}
+
+#cart a{
+    text-decoration: none;
+    color: aliceblue;
+    margin-left: 40px;
 }
