--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@
     display:inline;
 }
 
-nav{
+
+.uppar-nav{
 width: 100%;
 height: 56px;
 background-color: #2874f0;
@@ -17,6 +18,7 @@ position: fixed;
 display: flex;
 justify-content: center;
 align-items: center;
+/* margin-top: -50px; */
 }
 #logo{
     margin-right: 20px;
@@ -106,4 +108,29 @@ align-items: center;
     text-decoration: none;
     color: aliceblue;
     margin-left: 40px;
+}
+
+.Lower_Nav_bar{
+    height: 112px;
+    width: 100%;
+    /* background-color: #050d18; */
+    /* display: block; */
+    /* margin-top: 56px; */
+}
+
+.grid-container{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+    margin: 0px 150px 0px 150px;
+}
+.low-nav-img-size{
+    height: 112px;
+    width: 94px;
+    background-color: whitesmoke;
+}
+.low-nav-img-size{
+    height: 67px;
+    width: 67px;
+    margin-top: 10px;
+    background-color: white;
 }
