--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,20 @@ align-items: center;
     margin-top: 10px;
     background-color: white;
 }
+.low-nav-text-container{
+    width: 100px;
+}
+
+.gap{
+    border-top: 2px;
+    margin-top: 25px;
+    width: auto;
+    height: 8px;
+    background-color: #e0e0e0;
+}
+
+.ads-section{
+    height: 130px;
+    width: auto;
+    background-color: #FFE500;
+}
